2023-11-14  Karl Berry  <karl@freefriends.org>

	* Makefile: start tb138 (44:3).
	* tb138capsule.txt: new file.

2023-11-01  Karl Berry  <karl@freefriends.org>

	* tb79capsule.txt (Piska): url in wrong slot.

2023-10-27  Karl Berry  <karl@freefriends.org>

	* lists-unifications.txt (Lamb): prefer John D.
	
	* ltx2crossrefxml-tugboat.cfg (\GUI): handle.

2023-09-20  Karl Berry  <karl@freefriends.org>

	* lists-authinfo.txt (Beebe): orcid.

2023-09-19  Karl Berry  <karl@tug.org>

	* capaccum-title.pl (output_title_list): mis-edited out a "TUGboat".

2023-09-18  Karl Berry  <karl@freefriends.org>

	* capaccum-author.pl (output_author_list),
	* capaccum-keyword.pl,
	* capaccum-title.pl: tweak title wording, /TUGboat link.
	* capaccum.pl (accumulation):
	* capout.pl (write_issue): call tub_common_header, wording.
	* caputil.pl (tub_common_header): new fn for header text
	common to the lists and individual issue contents, with
	links to / and /TUGboat.

	* Makefile (diff-land): update previous to 44-1 (must automate).
	* crossref/README-process.txt: final svn diff/revert.
	
	* tb22capsule.txt (RIDT): Imaging, not Imagining.

2023-09-14  Karl Berry  <karl@freefriends.org>

	* tb137capsule.txt: new for 44:2.
	* crossref/ltx2crossrefxml-tugboat.cfg (\tbcode, \ASCII, \CSS,
	\DTD, \HINT, \LaTeXML, \WYSIWYG, \UNICODE, \latex, \tex): handle.
	* crossref/README-process.txt: \begin{abstract} and
	\end{abstract} lines ignored in abs.txt.

2023-08-20  Karl Berry  <karl@freefriends.org>

	* Makefile (testiss,lastiss,crossref_iss): tb137.
	* lists-unifications.txt (Conference Notes): add TUG 2023.
	(Hussain, Lisse, Novotn&#xfd;, Rajeesh, Rishi, Sundqvist,
	&#x0160;ustek): unifications for tb137.
	* lists-translations.txt (\GUI): translation for tb137.
	* lists-authinfo.txt: more orcid for tb137.
       
	* tb136capsule.txt (wermuth-globaldefs): correct title.
	* tb123capsule.txt (ahmetovic-axess): remove leading \\,
	turned into space sometimes.
