@@ -724,7 +724,8 @@ Ted Nieland
 Michael Nolan
     Nolan
 
-V&#xed;t Novotn&#xfd;
+V&#xed;t Star&#xfd;&#xa0;Novotn&#xfd;
+    V&#xed;t Novotn&#xfd;
     Novotn&#xfd;
 
 Janusz Nowacki
