@@ -409,7 +409,7 @@ access</a>.
 
 \capsule{}
   {\LaTeX}
-  {V\'{\i}t Star\'y Novotn\'y}
+  {V\'{\i}t Star\'y\CONNECT{}Novotn\'y}
   {Markdown~3 at \tug\ 2023: Reflections from the \acro{Q\&A} session}
   {Markdown vs.\ \LaTeX, support for Markdown flavors, writing slides
    with Markdown}
@@ -434,7 +434,7 @@ access</a>.
 
 \capsule{}
   {Philology}
-  {Janusz Bie\'n}
+  {Janusz S. Bie\'n}
   {Towards an inventory of old print characters: Ungler's
    \textit{Rubricella}, a case study}
   {character inventory of a 16th century Polish printer; using \TeX\
