@@ -1,3 +1,13 @@
+2023-11-14  Karl Berry  <karl@tug.org>
+
+	* capaccum-author.pl (print_all_by_author): more debugging lines,
+	commented out. Last names containing spaces, like Stary Novotny,
+	need \CONNECT.
+	* tb138capsule.txt (starynovotny): need \CONNECT.
+	(bien): forgot S.
+	* lists-unificatoins.txt (V&#xed;t Star&#xfd;&#xa0;Novotn&#xfd;):
+	new unification for Vit.
+
 2023-11-14  Karl Berry  <karl@freefriends.org>
 
 	* Makefile: start tb138 (44:3).
